@@ -1,5 +1,8 @@
 package org.opentripplanner.graph_builder.module;
 
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
 import org.opentripplanner.graph_builder.DataImportIssueStore;
 import org.opentripplanner.graph_builder.services.GraphBuilderModule;
 import org.opentripplanner.routing.graph.Edge;
@@ -7,11 +10,6 @@ import org.opentripplanner.routing.graph.Graph;
 import org.opentripplanner.routing.graph.Vertex;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
 
 /**
  * Check the every vertex and edge in the graph to make sure the edge lists and from/to
@@ -27,7 +25,7 @@ public class GraphCoherencyCheckerModule implements GraphBuilderModule {
 
     /** A list of ids of stages which must be provided before this stage */
     public List<String> getPrerequisites() {
-        return Arrays.asList("streets");
+        return List.of("streets");
     }
     
     private static final Logger LOG = LoggerFactory.getLogger(GraphCoherencyCheckerModule.class);
@@ -42,26 +40,26 @@ public class GraphCoherencyCheckerModule implements GraphBuilderModule {
         LOG.info("checking graph coherency...");
         for (Vertex v : graph.getVertices()) {
             if (v.getOutgoing().isEmpty() && v.getIncoming().isEmpty()) {
-                LOG.error("vertex {} has no edges", v);
-                coherent = false;
+                // This is ok for island transit stops etc. Log so that the type can be checked
+                issueStore.add("VertexWithoutEdges", "vertex %s has no edges", v);
             }
             for (Edge e : v.getOutgoing()) {
                 if (e.getFromVertex() != v) {
-                    LOG.error("outgoing edge of {}: from vertex {} does not match", v, e);
+                    issueStore.add("InvalidEdge", "outgoing edge of %s: from vertex %s does not match", v, e);
                     coherent = false;
                 }
                 if (e.getToVertex() == null) {
-                    LOG.error("outgoing edge has no to vertex {}", e);
+                    issueStore.add("InvalidEdge", "outgoing edge has no to vertex %s", e);
                     coherent = false;
                 }
             }
             for (Edge e : v.getIncoming()) {
                 if (e.getFromVertex() == null) {
-                    LOG.error("incoming edge has no from vertex {}", e);
+                    issueStore.add("InvalidEdge", "incoming edge has no from vertex %s", e);
                     coherent = false;
                 }
                 if (e.getToVertex() != v) {
-                    LOG.error("incoming edge of {}: to vertex {} does not match", v, e);
+                    issueStore.add("InvalidEdge", "incoming edge of %s: to vertex %s does not match", v, e);
                     coherent = false;
                 }
             }
